--- a/git101/git101.md
+++ b/git101/git101.md
@@ -16,3 +16,39 @@ title: git/gitlab basic
 ### 3. promote open source in NSN
 
 ---
+== data-rotate="20" data-x="0" data-y="200"
+
+#SSH key
+
+## 1. ssh key 
+```
+$ cmds 
+```
+
+
+---
+== data-rotate="20" data-x="0" data-y="200"
+# git clone
+
+```
+$ git clone your_repository_URL
+```
+
+---
+== data-rotate="20" data-x="0" data-y="200" id="status"
+
+
+
+
+---
+== data-rotate="20" data-x="0" data-y="200"
+# git add 
+
+```
+$ git add README
+```
+
+
+
+
+---
