--- a/git101/git101.md
+++ b/git101/git101.md
@@ -21,34 +21,122 @@ title: git/gitlab basic
 #SSH key
 
 ## 1. ssh key 
-```
+``` bash
 $ cmds 
 ```
+
+---
+== data-rotate="20" data-x="0" data-y="200"
+# Identify yourself
+
+
+
+```bash
+$ git config user.name  shu pengfei
+$ git config user.email pengfei.shu@nsn.com
+```
+
 
 
 ---
 == data-rotate="20" data-x="0" data-y="200"
 # git clone
 
-```
+``` bash
 $ git clone your_repository_URL
 ```
 
 ---
 == data-rotate="20" data-x="0" data-y="200" id="status"
 
-
+# file status
+![file status](./git_file_status.png)
 
 
 ---
-== data-rotate="20" data-x="0" data-y="200"
+== data-rotate="20" data-x="0" data-y="300"
 # git add 
 
-```
+``` bash
 $ git add README
+$ git status 
 ```
-
-
-
 
 ---
+== data-rotate="20" data-x="0" data-y="300"
+
+git commit 
+
+``` bash
+$ git commit -m "commit the readme"
+```
+what happened after commit <http://onlywei.github.io/explain-git-with-d3/#>
+
+---
+== data-rotate="20" data-x="0" data-y="400"
+
+#DRY
+### don't repeat yourself
+```
+$ git add .....
+$ git commit ....
+....
+
+
+$ git commit -am "all modified file will be commit" 
+```
+
+---
+== data-rotate="20" data-x="0" data-y="500"
+
+# git push/pull
+
+``` bash 
+$ git push 
+```
+### like svn commit
+
+### it's good to update first in svn,so does git 
+``` bash 
+$ git pull  // like svn update
+```
+
+---
+== data-rotate="20" data-x="0" data-y="600"
+
+# all these are engough
+
+```
+git add 
+git commit / git comit -am
+git pull
+git push 
+```
+---
+== data-rotate="20" data-x="0" data-y="600"
+
+# better with branch*
+## keep master as clean as possible
+
+##case 1 
+1. develope in a dev branch
+2. no body change, `git merge dev_branch`
+
+## case 2
+1. developein dev branch
+2. somebody update in master
+3. `git rebase master` 
+4. check all test pass.
+5. `git merge dev`
+
+---
+== data-rotate="20" data-x="0" data-y="600"
+
+# Q&A
+
+
+
+
+
+
+
