use impress css

--- a/git101/git101.md
+++ b/git101/git101.md
@@ -2,13 +2,12 @@
 author: Shu Pengfei
 title: git/gitlab basic
 ---
-== data-rotate="20" data-scale="1" data-x="0"
-
+== data-x="0" data-y="0"
 ## <center> Git/GitLab Basic <center>
 
 
 ---
-== data-rotate="20" data-x="0" data-y="100"
+==  data-x="1000" data-y="0"
 
 # Why git
 ### 1. git is popular /[github](github.com)/[bitbucket](bitbucket.org)
@@ -16,30 +15,26 @@ title: git/gitlab basic
 ### 3. promote open source in NSN
 
 ---
-== data-rotate="20" data-x="0" data-y="200"
+== data-x="2000" data-y="0"
 
 #SSH key
 
-## 1. ssh key 
+## 1. ssh key
 ``` bash
-$ cmds 
+$ cmds
 ```
 
 ---
-== data-rotate="20" data-x="0" data-y="200"
+== data-x="3000" data-y="0"
 # Identify yourself
-
-
 
 ```bash
 $ git config user.name  shu pengfei
 $ git config user.email pengfei.shu@nsn.com
 ```
 
-
-
 ---
-== data-rotate="20" data-x="0" data-y="200"
+== data-x="0" data-y="1000"
 # git clone
 
 ``` bash
@@ -47,25 +42,25 @@ $ git clone your_repository_URL
 ```
 
 ---
-== data-rotate="20" data-x="0" data-y="200" id="status"
+== data-x="1000" data-y="1000"
 
 # file status
 ![file status](./git_file_status.png)
 
 
 ---
-== data-rotate="20" data-x="0" data-y="300"
-# git add 
+== data-x="2000" data-y="1000"
+# git add
 
 ``` bash
 $ git add README
-$ git status 
+$ git status
 ```
 
 ---
-== data-rotate="20" data-x="0" data-y="300"
+== data-x="3000" data-y="1000"
 
-git commit 
+git commit
 
 ``` bash
 $ git commit -m "commit the readme"
@@ -73,7 +68,7 @@ $ git commit -m "commit the readme"
 what happened after commit <http://onlywei.github.io/explain-git-with-d3/#>
 
 ---
-== data-rotate="20" data-x="0" data-y="400"
+== data-x="4000" data-y="1000"
 
 #DRY
 ### don't repeat yourself
@@ -82,55 +77,59 @@ $ git add .....
 $ git commit ....
 ....
 
-
-$ git commit -am "all modified file will be commit" 
+$ git commit -am "all modified file will be commit"
 ```
 
 ---
-== data-rotate="20" data-x="0" data-y="500"
+== data-x="5000" data-y="1000"
 
 # git push/pull
 
-``` bash 
-$ git push 
+``` bash
+$ git push
 ```
 ### like svn commit
 
-### it's good to update first in svn,so does git 
-``` bash 
+### it's good to update first in svn,so does git
+``` bash
 $ git pull  // like svn update
 ```
 
 ---
-== data-rotate="20" data-x="0" data-y="600"
+== data-x="0" data-y="2000"
 
 # all these are engough
 
 ```
-git add 
+git add
 git commit / git comit -am
 git pull
-git push 
+git push
 ```
 ---
-== data-rotate="20" data-x="0" data-y="600"
+== data-x="1000" data-y="2000"
 
 # better with branch*
 ## keep master as clean as possible
 
-##case 1 
+---
+== data-x="2000" data-y="2000"
+##case 1
 1. develope in a dev branch
 2. no body change, `git merge dev_branch`
+
+---
+== data-x="3000" data-y="2000"
 
 ## case 2
 1. developein dev branch
 2. somebody update in master
-3. `git rebase master` 
+3. `git rebase master`
 4. check all test pass.
 5. `git merge dev`
 
 ---
-== data-rotate="20" data-x="0" data-y="600"
+== data-x="0" data-y="0" data-scale="5" data-z="-1"
 
 # Q&A
 
